lib_LIBRARIES = libchronosx.a
libchronosx_a_SOURCES = chronos_cache.c chronos_client.c chronos_environment.c chronos.h chronos_packets.c include/chronos_cache.h include/chronos_client.h include/chronos_environment.h include/chronos_packets.h include/chronos_transactions.h
include_HEADERS = include/chronos_cache.h include/chronos_client.h include/chronos_environment.h include/chronos_packets.h include/chronos_transactions.h
